# gemm_metal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  pyproject.toml
gemm/: benchmark.cpp  benchmark.h  kernel.cpp  kernel.h  matrix.cpp  matrix.h  metal_mgr.cpp  metal_mgr.h  params.h  utils.h
kernels/: naive.metal  opt_1.metal  opt_2.metal  tile_16.metal  tile_32.metal  tile_simdgroup.metal  tile_threads.metal
metal/: CMakeLists.txt  definition.cpp
metal/metal-cpp/: README.md
outputs/: naive.csv  opt_1.csv  opt_2.csv
